--- a/package.json
+++ b/package.json
@@ -56,16 +56,18 @@
 		"@fortawesome/fontawesome-svg-core": "^1.2.15",
 		"@fortawesome/free-solid-svg-icons": "^5.7.2",
 		"@fortawesome/react-fontawesome": "^0.1.4",
-		"bootstrap": "^4.1.3",
+		"bootstrap": "^4.3.1",
 		"events": "^1.1.1",
 		"jquery": "^3.3.1",
 		"popper.js": "^1.12.9",
 		"prop-types": "^15.6.1",
 		"query-string": "^5.1.1",
-		"react": "^16.5.2",
-		"react-dom": "^16.5.2",
+		"react": "^16.8.6",
+		"react-bootstrap": "^1.0.0-beta.6",
+		"react-dom": "^16.8.6",
 		"react-polyfills": "0.0.1",
 		"react-router": "^4.3.1",
-		"react-router-dom": "^4.3.1"
+		"react-router-dom": "^4.3.1",
+		"reactstrap": "^8.0.0"
 	}
 }
