--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"gh-pages": "^1.2.0",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
-		"node-sass": "^4.5.3",
+		"node-sass": "^4.12.0",
 		"parse-github-url": "^1.0.2",
 		"prettier": "^1.14.3",
 		"prettier-webpack-plugin": "^1.1.0",
@@ -41,7 +41,7 @@
 		"style-loader": "^0.19.0",
 		"webpack": "^4.0.1",
 		"webpack-cli": "^3.1.1",
-		"webpack-dev-server": "^3.1.1"
+		"webpack-dev-server": "^3.3.1"
 	},
 	"babel": {
 		"presets": [
@@ -58,7 +58,7 @@
 		"@fortawesome/react-fontawesome": "^0.1.4",
 		"bootstrap": "^4.3.1",
 		"events": "^1.1.1",
-		"jquery": "^3.3.1",
+		"jquery": "^3.4.0",
 		"popper.js": "^1.12.9",
 		"prop-types": "^15.6.1",
 		"query-string": "^5.1.1",
@@ -68,6 +68,7 @@
 		"react-polyfills": "0.0.1",
 		"react-router": "^4.3.1",
 		"react-router-dom": "^4.3.1",
+		"react-stripe-elements": "^3.0.0",
 		"reactstrap": "^8.0.0"
 	}
 }
